emf-state-machine/src/input_document/snapshots/emf_state_machine__input_document__tests__input_deploy_host.snap
---
source: emf-state-machine/src/input_document/mod.rs
expression: doc

---
version: 1.0
jobs:
  deploy_node1:
    name: Deploy Node 1
    needs: []
    steps:
      - action: host.create_file_ssh
        id: Add emf repo to node1
        inputs:
          host: node1
          contents: "[emf]\nname=emf repo\nbaseurl=http://node1:7080/repo/emf_repo/\ngpgcheck=0\n"
          path: /etc/yum.repos.d/emf.repo
          ssh_opts:
            port: 22
            user: root
            auth_opts:
              agent: false
              password: ~
              key_path: ~
              key_passphrase: ~
            proxy_opts: ~
        outputs: ~
      - action: host.create_file_ssh
        id: Add CLI config to node1
        inputs:
          host: node1
          contents: "SERVER_HTTP_URL=https://node1:7443"
          path: /etc/emf/cli.conf
          ssh_opts:
            port: 22
            user: root
            auth_opts:
              agent: false
              password: ~
              key_path: ~
              key_passphrase: ~
            proxy_opts: ~
        outputs: ~
      - action: host.ssh_command
        id: Install emf agent on node1
        inputs:
          host: node1
          run: yum install -y rust-emf-agent rust-emf-cli rust-emf-cli-bash-completion emf-sos-plugin
          ssh_opts:
            port: 22
            user: root
            auth_opts:
              agent: false
              password: ~
              key_path: ~
              key_passphrase: ~
            proxy_opts: ~
        outputs: ~
      - action: host.ssh_command
        id: Start agent on node1
        inputs:
          host: node1
          run: systemctl enable --now emf-agent.target
          ssh_opts:
            port: 22
            user: root
            auth_opts:
              agent: false
              password: ~
              key_path: ~
              key_passphrase: ~
            proxy_opts: ~
        outputs: ~
      - action: host.is_available
        id: Wait for node1 agent to report in
        inputs:
          fqdn: node1
          timeout: ~
        outputs: ~
  deploy_node2:
    name: Deploy Node 2
    needs: []
    steps:
      - action: host.setup_planes_ssh
        id: Setup Control plane and dataplane on node2
        inputs:
          host: node2
          cp_addr: node1
          ssh_opts:
            port: 22
            user: root
            auth_opts:
              agent: false
              password: ~
              key_path: ~
              key_passphrase: ~
            proxy_opts: ~
        outputs: ~
      - action: host.sync_file_ssh
        id: Sync dataplane token on node2
        inputs:
          host: node2
          from: /etc/emf/tokens/dataplane-token
          ssh_opts:
            port: 22
            user: root
            auth_opts:
              agent: false
              password: ~
              key_path: ~
              key_passphrase: ~
            proxy_opts: ~
        outputs: ~
      - action: host.create_file_ssh
        id: Add emf repo to node2
        inputs:
          host: node2
          contents: "[emf]\nname=emf repo\nbaseurl=http://node1:7080/repo/emf_repo/\ngpgcheck=0\n"
          path: /etc/yum.repos.d/emf.repo
          ssh_opts:
            port: 22
            user: root
            auth_opts:
              agent: false
              password: ~
              key_path: ~
              key_passphrase: ~
            proxy_opts: ~
        outputs: ~
      - action: host.create_file_ssh
        id: Add CLI config to node2
        inputs:
          host: node2
          contents: "SERVER_HTTP_URL=https://node1:7443"
          path: /etc/emf/cli.conf
          ssh_opts:
            port: 22
            user: root
            auth_opts:
              agent: false
              password: ~
              key_path: ~
              key_passphrase: ~
            proxy_opts: ~
        outputs: ~
      - action: host.ssh_command
        id: Install emf agent on node2
        inputs:
          host: node2
          run: yum install -y rust-emf-agent rust-emf-cli rust-emf-cli-bash-completion emf-sos-plugin
          ssh_opts:
            port: 22
            user: root
            auth_opts:
              agent: false
              password: ~
              key_path: ~
              key_passphrase: ~
            proxy_opts: ~
        outputs: ~
      - action: host.ssh_command
        id: Start agent node2
        inputs:
          host: node2
          run: systemctl enable --now emf-agent.target
          ssh_opts:
            port: 22
            user: root
            auth_opts:
              agent: false
              password: ~
              key_path: ~
              key_passphrase: ~
            proxy_opts: ~
        outputs: ~
      - action: host.is_available
        id: Wait for node2 agent to report in
        inputs:
          fqdn: node2
          timeout: ~
        outputs: ~
  deploy_node3:
    name: Deploy Node 3
    needs: []
    steps:
      - action: host.setup_planes_ssh
        id: Setup Control plane and dataplane for node3
        inputs:
          host: node3
          cp_addr: node1
          ssh_opts:
            port: 22
            user: root
            auth_opts:
              agent: false
              password: ~
              key_path: ~
              key_passphrase: ~
            proxy_opts: ~
        outputs: ~
      - action: host.sync_file_ssh
        id: Sync dataplane token across cluster
        inputs:
          host: node3
          from: /etc/emf/tokens/dataplane-token
          ssh_opts:
            port: 22
            user: root
            auth_opts:
              agent: false
              password: ~
              key_path: ~
              key_passphrase: ~
            proxy_opts: ~
        outputs: ~
      - action: host.create_file_ssh
        id: add emf repo to node3
        inputs:
          host: node3
          contents: "[emf]\nname=emf repo\nbaseurl=http://node1:7080/repo/emf_repo/\ngpgcheck=0\n"
          path: /etc/yum.repos.d/emf.repo
          ssh_opts:
            port: 22
            user: root
            auth_opts:
              agent: false
              password: ~
              key_path: ~
              key_passphrase: ~
            proxy_opts: ~
        outputs: ~
      - action: host.create_file_ssh
        id: add CLI config to node3
        inputs:
          host: node3
          contents: "SERVER_HTTP_URL=https://node1:7443"
          path: /etc/emf/cli.conf
          ssh_opts:
            port: 22
            user: root
            auth_opts:
              agent: false
              password: ~
              key_path: ~
              key_passphrase: ~
            proxy_opts: ~
        outputs: ~
      - action: host.ssh_command
        id: Install emf agent on node3
        inputs:
          host: node3
          run: yum install -y rust-emf-agent rust-emf-cli rust-emf-cli-bash-completion emf-sos-plugin
          ssh_opts:
            port: 22
            user: root
            auth_opts:
              agent: false
              password: ~
              key_path: ~
              key_passphrase: ~
            proxy_opts: ~
        outputs: ~
      - action: host.ssh_command
        id: Start agent on node3
        inputs:
          host: node3
          run: systemctl enable --now emf-agent.target
          ssh_opts:
            port: 22
            user: root
            auth_opts:
              agent: false
              password: ~
              key_path: ~
              key_passphrase: ~
            proxy_opts: ~
        outputs: ~
      - action: host.is_available
        id: Wait for node3 agent to report in
        inputs:
          fqdn: node3
          timeout: ~
        outputs: ~
  deploy_node4:
    name: Deploy Node 4
    needs: []
    steps:
      - action: host.setup_planes_ssh
        id: Setup Control plane and dataplane on node4
        inputs:
          host: node4
          cp_addr: node1
          ssh_opts:
            port: 22
            user: root
            auth_opts:
              agent: false
              password: ~
              key_path: ~
              key_passphrase: ~
            proxy_opts: ~
        outputs: ~
      - action: host.sync_file_ssh
        id: Sync dataplane token to node4
        inputs:
          host: node4
          from: /etc/emf/tokens/dataplane-token
          ssh_opts:
            port: 22
            user: root
            auth_opts:
              agent: false
              password: ~
              key_path: ~
              key_passphrase: ~
            proxy_opts: ~
        outputs: ~
      - action: host.create_file_ssh
        id: add emf repo to node4
        inputs:
          host: node4
          contents: "[emf]\nname=emf repo\nbaseurl=http://node1:7080/repo/emf_repo/\ngpgcheck=0\n"
          path: /etc/yum.repos.d/emf.repo
          ssh_opts:
            port: 22
            user: root
            auth_opts:
              agent: false
              password: ~
              key_path: ~
              key_passphrase: ~
            proxy_opts: ~
        outputs: ~
      - action: host.create_file_ssh
        id: add CLI config to node4
        inputs:
          host: node4
          contents: "SERVER_HTTP_URL=https://node1:7443"
          path: /etc/emf/cli.conf
          ssh_opts:
            port: 22
            user: root
            auth_opts:
              agent: false
              password: ~
              key_path: ~
              key_passphrase: ~
            proxy_opts: ~
        outputs: ~
      - action: host.ssh_command
        id: Install emf agent on node4
        inputs:
          host: node4
          run: yum install -y rust-emf-agent rust-emf-cli rust-emf-cli-bash-completion emf-sos-plugin
          ssh_opts:
            port: 22
            user: root
            auth_opts:
              agent: false
              password: ~
              key_path: ~
              key_passphrase: ~
            proxy_opts: ~
        outputs: ~
      - action: host.ssh_command
        id: Start agent on node4
        inputs:
          host: node4
          run: systemctl enable --now emf-agent.target
          ssh_opts:
            port: 22
            user: root
            auth_opts:
              agent: false
              password: ~
              key_path: ~
              key_passphrase: ~
            proxy_opts: ~
        outputs: ~
      - action: host.is_available
        id: Wait for node4 agent to report in
        inputs:
          fqdn: node4
          timeout: ~
        outputs: ~
  deploy_ubuntu1:
    name: Deploy Ubuntu1
    needs: []
    steps:
      - action: host.setup_planes_ssh
        id: Setup Control plane and dataplane on ubuntu1
        inputs:
          host: ubuntu1
          cp_addr: node1
          ssh_opts:
            port: 22
            user: root
            auth_opts:
              agent: false
              password: ~
              key_path: ~
              key_passphrase: ~
            proxy_opts: ~
        outputs: ~
      - action: host.sync_file_ssh
        id: Sync dataplane token to ubuntu1
        inputs:
          host: ubuntu1
          from: /etc/emf/tokens/dataplane-token
          ssh_opts:
            port: 22
            user: root
            auth_opts:
              agent: false
              password: ~
              key_path: ~
              key_passphrase: ~
            proxy_opts: ~
        outputs: ~
      - action: host.create_file_ssh
        id: add emf repo
        inputs:
          host: ubuntu1
          contents: "deb [trusted=yes] http://node1:7080/apt-repo/ emf non-free"
          path: /etc/apt/sources.list.d/emf.list
          ssh_opts:
            port: 22
            user: root
            auth_opts:
              agent: false
              password: ~
              key_path: ~
              key_passphrase: ~
            proxy_opts: ~
        outputs: ~
      - action: host.ssh_command
        id: Install emf agent ubuntu1
        inputs:
          host: ubuntu1
          run: "apt update\napt install -y \\\n  emf-action-agent \\\n  emf-device-agent \\\n  emf-journal-agent \\\n  emf-network-agent \\\n  emf-host-agent \\\n  emf-ntp-agent \\\n  emf-stats-agent\n"
          ssh_opts:
            port: 22
            user: root
            auth_opts:
              agent: false
              password: ~
              key_path: ~
              key_passphrase: ~
            proxy_opts: ~
        outputs: ~
      - action: host.ssh_command
        id: Start agent ubuntu1
        inputs:
          host: ubuntu1
          run: "systemctl enable --now \\\nemf-action-agent \\\nemf-device-agent \\\nemf-journal-agent \\\nemf-network-agent \\\nemf-host-agent \\\nemf-ntp-agent \\\nemf-stats-agent \\\nemf-agent.target\n"
          ssh_opts:
            port: 22
            user: root
            auth_opts:
              agent: false
              password: ~
              key_path: ~
              key_passphrase: ~
            proxy_opts: ~
        outputs: ~
      - action: host.is_available
        id: Wait for ubuntu1 agent to report in
        inputs:
          fqdn: ubuntu1.local
          timeout: ~
        outputs: ~
dry_run: true
timeout: ~
refresh: false

