emf-state-machine/src/input_document/snapshots/emf_state_machine__input_document__tests__valid_input_document.snap
---
source: emf-state-machine/src/input_document/mod.rs
expression: doc

---
version: 1.0
jobs:
  add_mds1:
    name: Add Mds1
    needs: []
    steps:
      - action: host.ssh_command
        id: step1
        inputs:
          host: mds1
          run: touch test
          ssh_opts:
            port: 22
            user: root
            auth_opts:
              agent: false
              password: ~
              key_path: ~
              key_passphrase: ~
            proxy_opts:
              host: proxy-host
              port: 22
              user: root
              password: ~
        outputs:
          id: this.id
  configure_lnet:
    name: configure lnet
    needs:
      - add_mds1
    steps:
      - action: lnet.configure
        id: step1
        inputs:
          host: "${{needs.add_mds1.step1.outputs.id}}"
          network: tcp0
          ethernet: eth1
        outputs: ~
dry_run: true
timeout: 5m
refresh: false

