emf-state-machine/src/input_document/snapshots/emf_state_machine__input_document__tests__with_action_after_inputs.snap
---
source: emf-state-machine/src/input_document/mod.rs
expression: err

---
jobs.add_mds1.steps[0]: action field not found. action must be present before inputs
