emf-state-machine/src/input_document/snapshots/emf_state_machine__input_document__tests__without_inputs.snap
---
source: emf-state-machine/src/input_document/mod.rs
expression: err

---
jobs.add_mds1.steps[0]: missing field `inputs`
